src/objects/Count_Session__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Last_Sync_Time__c</fullName>
        <label>Accounting Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Response__c</fullName>
        <label>Accounting Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Sync_Token__c</fullName>
        <label>Accounting Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Category__c.Type__c</field>
                <operation>equals</operation>
                <value>Adjustment</value>
            </filterItems>
            <filterItems>
                <field>Category__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Count Sessions</relationshipLabel>
        <relationshipName>Count_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Location_1__c</fullName>
        <label>Assigned Location 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Location_2__c</fullName>
        <label>Assigned Location 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Count_Date_Time__c</fullName>
        <label>Count Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count_Date__c</fullName>
        <label>Count Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Counted__c</fullName>
        <description>The total number of part records in the count session</description>
        <label>Counted</label>
        <summaryFilterItems>
            <field>Count_Session_Line_Item__c.Issue_Indicator__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Count_Session_Line_Item__c.Count_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Finalized_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finalized By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Count_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>DateTime when count session was finalized</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Adjust_Uncounted_Parts_To_Zero_Qty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Adjust Uncounted Parts To Zero Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Count_Sessions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Net_Adjustment_After_Finalize__c</fullName>
        <label>Net Adjustment After Finalize</label>
        <summarizedField>Count_Session_Line_Item__c.Total_Cost_Adjustment__c</summarizedField>
        <summaryForeignKey>Count_Session_Line_Item__c.Count_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QB_Accounting_Id__c</fullName>
        <label>QB Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of count session</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Adjusted_Cost__c</fullName>
        <label>Total Adjusted Cost</label>
        <summarizedField>Count_Session_Line_Item__c.Net_Adjustment__c</summarizedField>
        <summaryForeignKey>Count_Session_Line_Item__c.Count_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Adjusted_Parts__c</fullName>
        <label>Total Adjusted Parts</label>
        <summaryFilterItems>
            <field>Count_Session_Line_Item__c.Variance__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Count_Session_Line_Item__c.Is_Counted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Count_Session_Line_Item__c.Count_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
	<fields>
        <fullName>Total_Counted_Cost__c</fullName>
        <label>Total Counted Cost</label>
        <summarizedField>Count_Session_Line_Item__c.Net_Counted__c</summarizedField>
        <summaryForeignKey>Count_Session_Line_Item__c.Count_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Counted_Parts__c</fullName>
        <label>Total Counted Parts</label>
        <summaryFilterItems>
            <field>Count_Session_Line_Item__c.Is_Counted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Count_Session_Line_Item__c.Count_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
	<fields>
        <fullName>Total_Issues_To_Resolve__c</fullName>
        <label>Total Issues To Resolve</label>
        <summaryFilterItems>
            <field>Count_Session_Line_Item__c.Issue_Indicator__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Count_Session_Line_Item__c.Count_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Uncounted_Cost__c</fullName>
        <label>Total Uncounted Cost</label>
        <summarizedField>Count_Session_Line_Item__c.Net_Uncounted__c</summarizedField>
        <summaryForeignKey>Count_Session_Line_Item__c.Count_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Uncounted_Parts__c</fullName>
        <label>Total Uncounted Parts</label>
        <summaryFilterItems>
            <field>Count_Session_Line_Item__c.Is_Counted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Count_Session_Line_Item__c.Is_Selected_Part__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Count_Session_Line_Item__c.Count_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of count session</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Random count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycle count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full inventory</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendors__c</fullName>
        <label>Vendors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Creation_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when count session is completed. All uncounted parts session line items created.</description>
        <label>Is Creation Completed</label>
        <type>Checkbox</type>
    </fields>

    <label>Count Session</label>
    <listViews>
        <fullName>Async_Xero_Count_Session</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_For_Xero_Sync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async Xero Count Session</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>Count Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Count Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>